Search field rename
 - bin -> first6

 - last_digits -> last4